src/objects/AECOM_Employee__c.object
<CustomObject>
    <description>(HR Data) Design 2 - use custom object for employee data from HR.</description>
    <fields>
        <fullName>Adjusted_Service_Date__c</fullName>
        <description>Adjusted Service Date from HR</description>
        <label>Adjusted Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Category__c</fullName>
        <label>Assignment Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>AECOM business line</description>
        <label>Business Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>District from HR</description>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>AECOM e-mail id of employee</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>Employee id from HR data source. Used for external lookup to HR database.</description>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Full_Name__c</fullName>
        <description>Full Name from HR</description>
        <label>HR Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <description>Date Hired from HR</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>Employment end date</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Resume__c</fullName>
        <description>Link to Resume formatted output for active employees that would have a resume in the system based on Country</description>
        <formula>If(ISPICKVAL(Status__c,&quot;Inactive&quot;),&quot;&quot;, 
CASE(Office_Country__c , &quot;AE&quot;, 
&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;US&quot;, &apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;CA&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;Canada&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;QA&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;BH&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;EG&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;SA&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;United Arab Emirates&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;OM&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;JO&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;KW&quot;,&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fAECOM_Resume&amp;rs:Command=Render&amp;ID=&apos;&amp;Employee_ID__c, 
&quot;&quot;))</formula>
        <label>Link to Resume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_City__c</fullName>
        <description>Office City</description>
        <inlineHelpText>Office City from Oracle download</inlineHelpText>
        <label>Office City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Country__c</fullName>
        <label>Office Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_State__c</fullName>
        <label>Office State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldEmpNum__c</fullName>
        <label>OldEmpNum</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Hire_Date__c</fullName>
        <label>Original Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Primary phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prefer_Name__c</fullName>
        <description>Preferred Name from HR</description>
        <label>Prefer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The Region from HR.</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Email__c</fullName>
        <description>Supervisor Email from HR</description>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supervisor_Emp_Number__c</fullName>
        <description>Supervisor Employee Number from HR</description>
        <label>Supervisor Emp Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>Supervisor name loaded from HRIS</description>
        <inlineHelpText>Supervisor name loaded from HRIS</inlineHelpText>
        <label>Supervisor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Primary external title/role</description>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_ID__c</fullName>
        <description>Tracking ID from Hr</description>
        <label>Tracking ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>HR Data</label>
    <listViews>
        <fullName>ANZ</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Employee_ID__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>HR_Full_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Department__c</columns>
        <columns>District__c</columns>
        <columns>Geography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Office_Country__c</field>
            <operation>equals</operation>
            <value>AU</value>
        </filters>
        <label>ANZ Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_SF_Users</fullName>
        <columns>NAME</columns>
        <columns>Business_Line__c</columns>
        <columns>Office_Country__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Active SF Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Inactive_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date1</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Inactive_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
            <value>Dallas</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date2</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
            <value>Dallas</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date3</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
            <value>Fort worth</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date4</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
            <value>Fort worth</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date5</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_Country__c</field>
            <operation>equals</operation>
            <value>United States</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date6</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
            <value>Dallas</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date7</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_with_Term_Date8</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Inactive_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Business_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Office_Country__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>Active with Term Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Africa</fullName>
        <columns>NAME</columns>
        <columns>Office_City__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Geography__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>contains</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Office_City__c</field>
            <operation>equals</operation>
        </filters>
        <label>Africa with no office city</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AfricaBKS</fullName>
        <columns>Employee_ID__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Office_City__c</columns>
        <columns>Office_State__c</columns>
        <columns>Office_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_ID__c</field>
            <operation>startsWith</operation>
            <value>BKS</value>
        </filters>
        <label>AfricaBKS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Employees_with_Location</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Office_Country__c</columns>
        <columns>Office_City__c</columns>
        <columns>Office_State__c</columns>
        <columns>Department__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Geography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Inactive</value>
        </filters>
        <filters>
            <field>Business_Line__c</field>
            <operation>equals</operation>
            <value>PDD,Architecture,Building Engineering,DP&amp;E</value>
        </filters>
        <filters>
            <field>Office_Country__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>PDD America</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deactivated_in_the_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Business_Line__c</columns>
        <columns>Office_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Office_Country__c</field>
            <operation>equals</operation>
            <value>US,CA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Deactivated in the Last Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>